Closed Bug 1578910 Opened 5 years ago Closed 5 years ago

Browser flickers with black/invalid content rectangles on Windows 7 with Intel integrated GPU

Categories

(Core :: Graphics: WebRender, defect, P3)

69 Branch
x86_64
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox-esr68 --- disabled
firefox71 --- wontfix
firefox72 --- fixed

People

(Reporter: lsalzman, Assigned: jgilbert)

References

Details

(Keywords: regression)

Attachments

(1 file)

I am noticing that on my Windows 7 machine with an Intel integrated GPU, I am seeing rectangles of various sizes and position of the screen (including content and browser chrome) flicker occasionally, sometimes showing black and other times showing invalid content. The rectangles seem to vaguely be related to where the mouse is hovering (so may be invalidation related).

This seems to have only started in 69, and only happens with WebRender enabled. If I force the nvidia GPU on (this is an optimus laptop), it doesn't seem to happen. Disabling picture caching via pref seemed to have no effect on this.

It is possibly related to the flickering other people are reporting in this reddit thread: https://www.reddit.com/r/firefox/comments/czidkf/noticeably_worse_font_rendering_in_tab_titles/

Also worth noticing this is an i7-3720qm, which is Ivy Bridge. It looks like in the fix in https://phabricator.services.mozilla.com/D40354 that only Broadwell or Haswell were covered. If this bug is caused by that issue, then we probably want to just force it for any iGPU <= Broadwell?

It'd be worth checking if enabling that angle workaround fixes your issue - although in the case reported, it only affected picture caching tiles.

I think we've seen another bug report recently where we were seeing some black rectangles on Intel drivers after a recent update, and they were occurring on both WR and non-WR paths. Jeff might know which bug that was and/or what the status is?

Flags: needinfo?(jmuizelaar)

We're you thinking of bug 1571340?

Flags: needinfo?(jmuizelaar)

(In reply to Glenn Watson [:gw] from comment #2)

It'd be worth checking if enabling that angle workaround fixes your issue - although in the case reported, it only affected picture caching tiles.

I think we've seen another bug report recently where we were seeing some black rectangles on Intel drivers after a recent update, and they were occurring on both WR and non-WR paths. Jeff might know which bug that was and/or what the status is?

Enabling that workaround in angle fixes the issue for me, yes. So we should probably include ivy bridge, and maybe sandy bridge, ids in there?

Sounds reasonable to me - let's check with Jeff since it's an ANGLE change though.

Flags: needinfo?(jgilbert)
Blocks: wr-win7
Priority: -- → P3

Yeah, sounds great.

Flags: needinfo?(jgilbert)
See Also: → 1562462

This is going to be a pain to cherry-pick, because ANGLE's been churning the workaround code pretty hard. :(

Priority: P3 → P2
Priority: P2 → P3
Assignee: nobody → jgilbert
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4f11f3a676b2
ANGLE Cherry-pick flickering fix for Ivy Bridge. r=lsalzman
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: