Fix occasional corruption of vertex textures on older Intel GPUs.

This appears to be caused by the UpdateSubResource call,
which is worked around by enabling the other image upload
path that ANGLE supports.

The workaround doesn't include a driver version, since the
bug is occurring in the most recent driver that is currently
available (15.40.42.5063, released 19th Mar 2019).

Firefox bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1578910

Bug: angleproject:3980
Change-Id: I32fe8ee9cb5b24088d864d1ad659a483237712d9