src/libANGLE/renderer/d3d/d3d11/renderer11_utils.cpp
@@ -2426,9 +2426,13 @@ void InitializeFeatures(const Renderer11DeviceCaps &deviceCaps,
             features->callClearTwice.enabled    = capsVersion < IntelDriverVersion(4771);
             features->emulateIsnanFloat.enabled = capsVersion < IntelDriverVersion(4542);
         }
-        else if (IsBroadwell(adapterDesc.DeviceId) || IsHaswell(adapterDesc.DeviceId))
+        else if (IsBroadwell(adapterDesc.DeviceId) || IsHaswell(adapterDesc.DeviceId) ||
+                 IsIvyBridge(adapterDesc.DeviceId))
         {
             features->rewriteUnaryMinusOperator.enabled = capsVersion < IntelDriverVersion(4624);
+
+            // Occasionally corrupted (small?) (vertex?) texture data uploads.
+            features->setDataFasterThanImageUpload.enabled = false;
         }
     }
 
